Atualizando HP e Descrição

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
-                    <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis et ab voluptate. Non sit ut cum hic fugit provident at vitae libero alias! Unde tempore soluta natus officiis ullam nobis.</p>
+                    <p class="texto">Os Pikachus são pequenos roedores de quarenta centímetros e de seis quilogramas, com um corpo redondo, pernas curtas e uma longa cauda, quando macho, a cauda tem um formato de um raio, mas se o Pikachu for fêmea sua cauda ganha um coração na ponta.</p>
                 </div>
             </li>
 
@@ -50,7 +50,7 @@
 
                 <div class="informacoes">
                     <h2 class="nome">Charizard</h2>
-                    <p class="vida">HP 300</p>
+                    <p class="vida">HP 800</p>
                 </div>
 
                 <div class="container-imagem">
@@ -59,7 +59,7 @@
 
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
-                    <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis et ab voluptate. Non sit ut cum hic fugit provident at vitae libero alias! Unde tempore soluta natus officiis ullam nobis.</p>
+                    <p class="texto">Geralmente, um Charizard é competitivo. Ele adora a batalha e seu espírito competitivo também é notável, uma vez que nunca vai cuspir fogo em um inimigo mais fraco a menos que provocado ou ordenado. Quando fica muito irritado, as chamas em sua cauda se tornam branco-azuladas.</p>
                 </div>
             
             </li>
@@ -68,7 +68,7 @@
 
                 <div class="informacoes">
                     <h2 class="nome">Mewtwo</h2>
-                    <p class="vida">HP 300</p>
+                    <p class="vida">HP 1200</p>
                 </div>
 
                 <div class="container-imagem">
@@ -77,7 +77,7 @@
 
                 <div class="descricao">
                     <h3 class="titulo">Descrição</h3>
-                    <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis et ab voluptate. Non sit ut cum hic fugit provident at vitae libero alias! Unde tempore soluta natus officiis ullam nobis.</p>
+                    <p class="texto">Mewtwo foi criado geneticamente em um laboratório, sendo um clone do misterioso antigo Pokémon Mew. É uma criatura com uma postura humanóide, mas tem algumas características felinas.</p>
                 </div>
             </li>
 
